[gd_scene load_steps=9 format=3 uid="uid://bgaglybpdid6m"]

[ext_resource type="Script" uid="uid://bm4ipe1qk45yr" path="res://script/player/player_ui.gd" id="1_q5tpf"]
[ext_resource type="Texture2D" uid="uid://jn61hnhhjwpc" path="res://assets/player/ui/healthbar.png" id="2_2odna"]
[ext_resource type="Texture2D" uid="uid://cdc85p7bpejic" path="res://assets/player/ui/mana_kyknya.png" id="3_fxlw0"]
[ext_resource type="Texture2D" uid="uid://bnf8hyp18ikuw" path="res://assets/player/ui/health.png" id="4_hghyo"]
[ext_resource type="Texture2D" uid="uid://cbmqn1tuppots" path="res://assets/player/ui/skillcolong.png" id="5_hpgat"]
[ext_resource type="Texture2D" uid="uid://cq6v17reywsd2" path="res://assets/player/ui/icon_puppet_shooter.png" id="6_2777s"]
[ext_resource type="Texture2D" uid="uid://bxr8mfe0ah8db" path="res://assets/player/ui/icon_wolf.png" id="7_xaofh"]
[ext_resource type="Texture2D" uid="uid://cldrx4j3revan" path="res://assets/player/ui/icon_puppet.png" id="8_5rlws"]

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_q5tpf")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = 72.0
offset_top = 944.0
offset_right = 538.0
offset_bottom = 984.0
value = 100.0
texture_progress = ExtResource("2_2odna")

[node name="Dash" type="TextureProgressBar" parent="."]
offset_left = 47.0
offset_top = 990.0
offset_right = 513.0
offset_bottom = 1030.0
value = 100.0
rounded = true
texture_progress = ExtResource("3_fxlw0")

[node name="Health" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("4_hghyo")

[node name="SkillMorph1" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("5_hpgat")

[node name="SkillMorph2" type="Sprite2D" parent="."]
position = Vector2(1040, 540)
texture = ExtResource("5_hpgat")

[node name="SkillMorph3" type="Sprite2D" parent="."]
position = Vector2(1120, 540)
texture = ExtResource("5_hpgat")

[node name="SkillMorph4" type="Sprite2D" parent="."]
position = Vector2(1200, 540)
texture = ExtResource("5_hpgat")

[node name="IconPuppetShooter" type="Sprite2D" parent="."]
position = Vector2(595, 1000)
scale = Vector2(1.078125, 1.078125)
texture = ExtResource("6_2777s")
region_enabled = true
region_rect = Rect2(24, 16, 80, 64)

[node name="IconWolf" type="Sprite2D" parent="."]
position = Vector2(675.99994, 1002)
scale = Vector2(1.085875, 1.085875)
texture = ExtResource("7_xaofh")
region_enabled = true
region_rect = Rect2(32, 32, 64, 64)

[node name="IconPuppetShooter2" type="Sprite2D" parent="."]
position = Vector2(755.00006, 1000.00006)
scale = Vector2(1.078125, 1.078125)
texture = ExtResource("6_2777s")
region_enabled = true
region_rect = Rect2(24, 16, 80, 64)

[node name="IconPuppet" type="Sprite2D" parent="."]
position = Vector2(835.9999, 999.99994)
scale = Vector2(1.7, 1.7)
texture = ExtResource("8_5rlws")
region_enabled = true
region_rect = Rect2(40, 32, 48, 48)
